# rust-jax-ffi

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.py  pyproject.toml
src/: ffi.cc  lib.rs
tests/: conftest.py  test_rms_norm.py
